crates/flow-ir/tests/snapshots/golden_mermaid__d_loop_b_ne_u.snap
---
source: crates/flow-ir/tests/golden_mermaid.rs
expression: dump
---
flowchart LR
    subgraph f0["fn sum_to_n"]
        f0o0(("i32"))
        f0o1(("ret: i32"))
        f0o2(("1: i32"))
        f0o3(("0: i32"))
        f0o4(("init: (i32, i32)"))
        f0o5(("⟲ (i32, i32)"))
        f0o6(("i: i32"))
        f0o7(("acc: i32"))
        f0o8(("(i32, i32)"))
        f0o9(("cond: bool"))
        f0o10(("1: i32"))
        f0o11(("(i32, i32)"))
        f0o12(("inext: i32"))
        f0o13(("(i32, i32)"))
        f0o14(("accnext: i32"))
        f0o15(("next: (i32, i32)"))
        f0o16(("((i32, i32), bool)"))
        f0o17(("(i32, bool)"))
        f0o2 -- "Pair 0/2" --> f0o4
        f0o3 -- "Pair 1/2" --> f0o4
        f0o4 -- "LoopEnter" --> f0o5
        f0o5 -- "Proj 0" --> f0o6
        f0o5 -- "Proj 1" --> f0o7
        f0o6 -- "Pair 0/2" --> f0o8
        f0o0 -- "Pair 1/2" --> f0o8
        f0o8 -- "Le" --> f0o9
        f0o6 -- "Pair 0/2" --> f0o11
        f0o10 -- "Pair 1/2" --> f0o11
        f0o11 -- "Add" --> f0o12
        f0o7 -- "Pair 0/2" --> f0o13
        f0o6 -- "Pair 1/2" --> f0o13
        f0o13 -- "Add" --> f0o14
        f0o12 -- "Pair 0/2" --> f0o15
        f0o14 -- "Pair 1/2" --> f0o15
        f0o15 -- "Pair 0/2" --> f0o16
        f0o9 -- "Pair 1/2" --> f0o16
        f0o16 -- "LoopBack ↩" --> f0o5
        f0o7 -- "Pair 0/2" --> f0o17
        f0o9 -- "Pair 1/2" --> f0o17
        f0o17 -- "LoopExit" --> f0o1
    end
