crates/flow-ir/tests/snapshots/golden_mermaid__h_print_in_loop.snap
---
source: crates/flow-ir/tests/golden_mermaid.rs
expression: dump
---
flowchart LR
    subgraph f0["fn main"]
        f0o0(("io"))
        f0o1(("ret: io"))
        f0o2(("0: i32"))
        f0o3(("init: (i32, io)"))
        f0o4(("⟲ (i32, io)"))
        f0o5(("i: i32"))
        f0o6(("tok: io"))
        f0o7(("(io, i32)"))
        f0o8(("io"))
        f0o9(("3: i32"))
        f0o10(("(i32, i32)"))
        f0o11(("cond: bool"))
        f0o12(("1: i32"))
        f0o13(("(i32, i32)"))
        f0o14(("inext: i32"))
        f0o15(("next: (i32, io)"))
        f0o16(("((i32, io), bool)"))
        f0o17(("(io, bool)"))
        f0o18(("exit_tok: io"))
        f0o2 -- "Pair 0/2" --> f0o3
        f0o0 -- "Pair 1/2" --> f0o3
        f0o3 -- "LoopEnter" --> f0o4
        f0o4 -- "Proj 0" --> f0o5
        f0o4 -- "Proj 1" --> f0o6
        f0o6 -- "Pair 0/2" --> f0o7
        f0o5 -- "Pair 1/2" --> f0o7
        f0o7 -- "Print" --> f0o8
        f0o5 -- "Pair 0/2" --> f0o10
        f0o9 -- "Pair 1/2" --> f0o10
        f0o10 -- "Lt" --> f0o11
        f0o5 -- "Pair 0/2" --> f0o13
        f0o12 -- "Pair 1/2" --> f0o13
        f0o13 -- "Add" --> f0o14
        f0o14 -- "Pair 0/2" --> f0o15
        f0o8 -- "Pair 1/2" --> f0o15
        f0o15 -- "Pair 0/2" --> f0o16
        f0o11 -- "Pair 1/2" --> f0o16
        f0o16 -- "LoopBack ↩" --> f0o4
        f0o8 -- "Pair 0/2" --> f0o17
        f0o11 -- "Pair 1/2" --> f0o17
        f0o17 -- "LoopExit" --> f0o18
        f0o18 -- "Output" --> f0o1
    end
